--- a/RNBOWrapper/RNBOWrapper.cpp.in
+++ b/RNBOWrapper/RNBOWrapper.cpp.in
@@ -5,6 +5,11 @@
 //  Created by Jonas Füllemann on 19.01.24.
 //
 
+#define DR_WAV_IMPLEMENTATION
+#include "dr_wav.h"
+#define DR_MP3_IMPLEMENTATION
+#include "dr_mp3.h"
+
 #include "RNBOWrapper.hpp"
 
 extern "C" RNBO::PatcherFactoryFunctionPtr @PLUGIN_NAME@FactoryFunction(RNBO::PlatformInterface* platformInterface);
@@ -44,6 +49,50 @@ void RNBOWrapper::Reset()
     CleanupBuffers();
     
     lastChannelCount = -1;
+}
+
+bool RNBOWrapper::DecodeAudio(const void* data, size_t dataLength, char*& decodedData, size_t& decodedLengthInBytes, unsigned int& channels, unsigned int& sampleRate)
+{
+    // The caller of this function is responsible for freeing the memory allocated for decodedData,
+    // which should be done via the callback passed to RNBO's setExternalData.
+
+    // Try WAV
+    drwav wav;
+    if (drwav_init_memory(&wav, data, dataLength, NULL)) {
+        drwav_uint64 frameCount = wav.totalPCMFrameCount;
+        channels = wav.channels;
+        sampleRate = wav.sampleRate;
+        drwav_uint64 totalSampleCount = frameCount * channels;
+        float* pcmData = new float[totalSampleCount];
+        
+        drwav_read_pcm_frames_f32(&wav, frameCount, pcmData);
+        
+        drwav_uninit(&wav);
+        
+        decodedData = reinterpret_cast<char*>(pcmData);
+        decodedLengthInBytes = totalSampleCount * sizeof(float);
+        return true;
+    }
+
+    // Try MP3
+    drmp3 mp3;
+    if (drmp3_init_memory(&mp3, data, dataLength, NULL)) {
+        drmp3_uint64 pcmFrameCount = drmp3_get_pcm_frame_count(&mp3);
+        channels = mp3.channels;
+        sampleRate = mp3.sampleRate;
+        drmp3_uint64 totalSampleCount = pcmFrameCount * channels;
+        float* pcmData = new float[totalSampleCount];
+        
+        drmp3_read_pcm_frames_f32(&mp3, pcmFrameCount, pcmData);
+        
+        drmp3_uninit(&mp3);
+        
+        decodedData = reinterpret_cast<char*>(pcmData);
+        decodedLengthInBytes = totalSampleCount * sizeof(float);
+        return true;
+    }
+
+    return false;
 }
 
 namespace RNBOFMODHelpers
